--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <a href="./recipes/kare-kare.html">Kare Kare(Oxtail Stew)</a>
-      <a href="./recipes/fried-chicken.html">Fried Chicken</a>
-      <a href="./recipes/chicken-adobo.html">Chicken Adobo</a>
-    </ul>
+    <main>
+      <h1>Odin Recipes</h1>
+      <div class="card-grid">
+        <div class="card">
+          <div class="card__content">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam,
+              adipisci.
+            </p>
+          </div>
+        </div>
+      </div>
+      <ul>
+        <a href="./recipes/kare-kare.html">Kare Kare(Oxtail Stew)</a>
+        <a href="./recipes/fried-chicken.html">Fried Chicken</a>
+        <a href="./recipes/chicken-adobo.html">Chicken Adobo</a>
+      </ul>
+    </main>
   </body>
 </html>
